@@ -73,6 +73,8 @@ configuration options.
 
 ### Getting Started
 
+As of version `3.4.0` and JDK 25, LWJGL supports the FFM API and is fully functional when running with `--sun-misc-unsafe-memory-access=deny`. See the [FFM documentation](https://github.com/LWJGL/lwjgl3/blob/master/doc/FFM.md) for details.
+
 As of version `3.1.0`, LWJGL is distributed as a set of modules. Only the
 core module is required and all bindings are optional (but some bindings
 depend on other bindings). The easiest way to download LWJGL is to use the
@@ -219,6 +221,7 @@ improve the chances of a quick and useful response.
 | [LZ4](https://lz4.org/)| A lossless data compression algorithm that is focused on compression and decompression speed.|
 | [ODBC](https://docs.microsoft.com/en-us/sql/odbc/microsoft-open-database-connectivity-odbc)| A C programming language interface that makes it possible for applications to access data from a variety of database management systems (DBMSs).|
 | [Remotery](https://github.com/Celtoys/Remotery)| A realtime CPU/GPU profiler hosted in a single C file with a viewer that runs in a web browser.|
+| [RenderDoc](https://renderdoc.org)| An API to control the RenderDoc GPU debugger.|
 | [rpmalloc](https://github.com/mjansson/rpmalloc)| A public domain cross platform lock free thread caching 16-byte aligned memory allocator implemented in C.|
 | [xxHash](https://github.com/Cyan4973/xxHash)| An Extremely fast Hash algorithm, running at RAM speed limits.|
 | [Zstandard](http://facebook.github.io/zstd/) (zstd)| A fast lossless compression algorithm, targeting real-time compression scenarios at zlib-level and better compression ratios.|
